# copiosis-rocket

./: .gitattributes  Cargo.toml  README.md
src/: db.rs  main.rs  products.rs  transfers.rs  users.rs
templates/: addproduct.html.hbs  adduser.html.hbs  adduserproduct.html.hbs  fame.html.hbs  index.html.hbs  products.html.hbs  transfer.html.hbs  transfers.html.hbs  users.html.hbs
templates_cz/: addproduct.html.hbs  adduser.html.hbs  adduserproduct.html.hbs  fame.html.hbs  index.html.hbs  products.html.hbs  transfer.html.hbs  transfers.html.hbs  users.html.hbs
