[package]
name = "copiosis-rocket"
version = "0.2.2"
authors = ["Michal Mauser <michal.mauser@zeitgeistmovement.cz>"]
edition = "2018"

[features]
default = ["gui"]
gui = ["webbrowser"]

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
webbrowser = { version = "0.5.2", optional = true }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates"]

[dependencies.rusqlite]
features = ["bundled"]
version = "0.14"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi" ]
android_version = 18
target_sdk_version = 18
min_sdk_version = 18
opengles_version_major = 1
opengles_version_minor = 1
