[package]
name = "copiosis-rocket"
version = "0.2.2"
authors = ["Michal Mauser <michal.mauser@zeitgeistmovement.cz>"]
edition = "2018"

[features]
default = ["gui"]
gui = ["webbrowser"]

[dependencies]
rocket = "0.5.0-rc.1"
webbrowser = { version = "0.5.2", optional = true }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
default-features = false
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["sqlite_pool"]

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi" ]
android_version = 18
target_sdk_version = 18
min_sdk_version = 18
opengles_version_major = 1
opengles_version_minor = 1
